--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clarity-seed",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "Angular-CLI starter for a Clarity project",
   "angular-cli": {},
   "scripts": {
@@ -14,33 +14,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.2.3",
-    "@angular/compiler": "2.2.3",
-    "@angular/core": "2.2.3",
-    "@angular/forms": "2.2.3",
-    "@angular/http": "2.2.3",
-    "@angular/platform-browser": "2.2.3",
-    "@angular/platform-browser-dynamic": "2.2.3",
-    "@angular/router": "3.2.3",
+    "@angular/common": "^2.4.1",
+    "@angular/compiler": "^2.4.1",
+    "@angular/core": "^2.4.1",
+    "@angular/forms": "^2.4.1",
+    "@angular/http": "^2.4.1",
+    "@angular/platform-browser": "^2.4.1",
+    "@angular/platform-browser-dynamic": "^2.4.1",
+    "@angular/router": "^3.4.1",
     "@webcomponents/custom-elements": "1.0.0-alpha.3",
     "angular2-infinite-scroll": "^0.2.8",
-    "clarity-angular": "^0.7.5",
-    "clarity-icons": "^0.7.5",
-    "clarity-ui": "^0.7.5",
+    "clarity-angular": "^0.8.0",
+    "clarity-icons": "^0.8.0",
+    "clarity-ui": "^0.8.0",
     "core-js": "^2.4.1",
-    "es6-shim": "^0.35.1",
     "mutationobserver-shim": "^0.3.2",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "web-animations-js": "^2.2.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "bootstrap": "4.0.0-alpha.5",
-    "@angular/compiler-cli": "2.2.3",
+    "@angular/compiler-cli": "^2.4.1",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.20-4",
+    "angular-cli": "^1.0.0-beta.24",
+    "bootstrap": "4.0.0-alpha.5",
     "codelyzer": "~1.0.0-beta.3",
     "enhanced-resolve": "^3.0.0",
     "jasmine-core": "2.4.1",
@@ -53,7 +52,7 @@
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
-    "tslint": "3.13.0",
+    "tslint": "^4.1.1",
     "typescript": "~2.0.3",
     "typings": "^1.4.0",
     "webdriver-manager": "10.2.5"
